# SO2-Dining-philosophers

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: cpplint.yml
src/: Philosopher.cpp  Philosopher.h  Semaphore.cpp  Semaphore.h  main.cpp
